--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,10 +2,12 @@ name: Publish artifacts in Space
 on:
   release:
     types: [ published ]
+  push:
+    branches: [ main, master, lamberto.basti/dev, dev ]
 jobs:
   publish:
     name: Publish
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v2
